fix project name

--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,8 @@
 {
   "hosting": {
     "target": "task-manager",
-    "public": "dist/test",
-    "ignore": [
-      "**/.*"
-    ],
+    "public": "dist/task-manager",
+    "ignore": ["**/.*"],
     "headers": [
       {
         "source": "*.[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f].+(css|js)",
